Fixed styling issues on mobile view and removed popular slider once source=mta (commit#13)

--- a/src/Components/ListSections/ListSections.scss
+++ b/src/Components/ListSections/ListSections.scss
@@ -406,7 +406,7 @@ and (orientation: landscape){
     }
     .channelListImg{
         width: 92%;
-        height: 150px;
+        height: 100px;
     }
     .premiumTag{
         margin-top: -2vh;
@@ -474,7 +474,7 @@ and (orientation: landscape){
     }
     .contentCategory{
         width: 10px;
-        bottom: 8vh !important;
+        bottom: 9vh !important;
         right: 1vh;
         padding: 5px 15px 5px 5px;
     }
