--- a/src/Pages/Live/Live.scss
+++ b/src/Pages/Live/Live.scss
@@ -1,49 +1,68 @@
-.liveTvContainer{
+.liveTvContainer {
     padding: 5% 5% 0 10%;
-}
-.heading{
+  }
+  
+  .heading {
     color: white;
     font-weight: 900;
     font-size: x-large;
     text-transform: uppercase;
     margin-bottom: 5%;
-}
-.channelImg{
+  }
+  
+  .channelImg {
     width: 100%;
     height: 200px;
     border-radius: 10px;
-
+  
     /* Media query for screens smaller than 768px (tablets) */
-  @media (max-width: 768px) {
-    width: 150px;
-    height: 150px;
+    @media (max-width: 768px) {
+      width: 150px;
+      height: 150px;
+    }
+  
+    /* Media query for screens smaller than 480px (mobile phones) */
+    @media (max-width: 480px) {
+      width: 100px;
+      height: 100px;
+    }
   }
-
-  /* Media query for screens smaller than 480px (mobile phones) */
-  @media (max-width: 480px) {
-    width: 100px;
-    height: 100px;
-  }
-}
-.channelName{
+  
+  .channelName {
     color: white;
     margin-top: 5px;
-    text-align: center;
     font-size: small;
     font-weight: bold;
-}
-.loaderGI{
+    margin-left: 0px !important;
+    text-align: center !important;
+  
+    /* Media query for screens smaller than 768px (tablets) */
+    @media (max-width: 768px) {
+      text-align: center !important;
+      /*margin-left: -50px !important;*/
+    }
+  
+    /* Media query for screens smaller than 480px (mobile phones) */
+    @media (max-width: 480px) {
+      text-align: center !important;
+      margin-left: -70px !important;
+    }
+  }
+  
+  .loaderGI {
     position: relative;
     bottom: 10vh;
-}
-
-@media only screen and (max-width: 900px){
-    .liveChannelMarginLeft{
-        margin-right: 12px;
+  }
+  
+  @media only screen and (max-width: 900px) {
+    .liveChannelMarginLeft {
+      margin-right: 12px;
     }
+  }
+  
+  @media only screen and (min-width: 900px) {
+    .liveChannelMarginLeft {
+      margin-left: 5%;
     }
-@media only screen and (min-width: 900px){
-.liveChannelMarginLeft{
-    margin-left: 5%;
-}
-}
+  }
+  
